--- a/README
+++ b/README
@@ -6,3 +6,7 @@ python pub.py
 
 mosquitto_sub -h test.mosquitto.org -t "CoreElectronics/test"
 mosquitto_sub -h test.mosquitto.org -t "CoreElectronics/topic"
+
+
+mosquitto_pub -h test.mosquitto.org -t CoreElectronics/test -m "Hello"
+mosquitto_pub -h test.mosquitto.org -t CoreElectronics/topic -m "World!"
