--- a/README
+++ b/README
@@ -4,9 +4,13 @@ python sub.py
 python pub.py
 
 
+-----------------------------------------------------------------------
+
+mqtt_client.py
+mqtt_publish.py
+
 mosquitto_sub -h test.mosquitto.org -t "CoreElectronics/test"
 mosquitto_sub -h test.mosquitto.org -t "CoreElectronics/topic"
-
 
 mosquitto_pub -d -h test.mosquitto.org -t CoreElectronics/test -m "Hello"
 mosquitto_pub -d -h test.mosquitto.org -t CoreElectronics/topic -m "World!"
