--- a/README
+++ b/README
@@ -17,3 +17,10 @@ mosquitto_pub -d -h test.mosquitto.org -t topic_2 -m "World!"
 
 mosquitto_pub -d -h test.mosquitto.org -t topic_1 -m "Hello" --id client-one
 mosquitto_pub -d -h test.mosquitto.org -t topic_2 -m "World!" --id client-one
+
+-----------------------------------------------------------------------
+
+sudo service mosquitto status
+
+
+
