--- a/README
+++ b/README
@@ -18,6 +18,8 @@ mosquitto_pub -d -h test.mosquitto.org -t topic_2 -m "World!"
 mosquitto_pub -d -h test.mosquitto.org -t topic_1 -m "Hello" --id client-one
 mosquitto_pub -d -h test.mosquitto.org -t topic_2 -m "World!" --id client-one
 
+mosquitto_sub -h localhost -t "topic_1"
+
 -----------------------------------------------------------------------
 
 sudo service mosquitto status
